@@ -25,11 +25,10 @@ apply from: rootProject.file( 'gradle/module.gradle' )
 apply from: rootProject.file( 'gradle/libraries.gradle' )
 apply from: rootProject.file( 'gradle/databases.gradle' )
 
-apply plugin: 'org.hibernate.orm.database-service'
-
 apply plugin: 'java-library'
 apply plugin: 'biz.aQute.bnd.builder'
 apply plugin: 'org.hibernate.orm.database-service'
+apply plugin: 'org.hibernate.orm.build.java-module'
 
 apply plugin: 'org.checkerframework'
 
@@ -159,58 +158,6 @@ tasks.withType( JavaCompile ) {
 //	]
 }
 
-if ( !gradle.ext.javaToolchainEnabled ) {
-	tasks.compileJava.configure {
-		sourceCompatibility = JavaVersion.toVersion( gradle.ext.javaVersions.main.release )
-		targetCompatibility = JavaVersion.toVersion( gradle.ext.javaVersions.main.release )
-	}
-	tasks.compileTestJava.configure {
-		sourceCompatibility = JavaVersion.toVersion( gradle.ext.javaVersions.test.release )
-		targetCompatibility = JavaVersion.toVersion( gradle.ext.javaVersions.test.release )
-	}
-}
-else {
-	// Configure generated bytecode
-	// "sourceCompatibility" is not supported with toolchains. We have to work around that limitation.
-	tasks.compileJava.configure {
-		options.release = gradle.ext.javaVersions.main.release.asInt()
-		// Needs add-opens because of https://github.com/gradle/gradle/issues/15538
-		options.forkOptions.jvmArgs.addAll( ["--add-opens", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED"] )
-	}
-	tasks.compileTestJava.configure {
-		options.release = gradle.ext.javaVersions.test.release.asInt()
-		// Needs add-opens because of https://github.com/gradle/gradle/issues/15538
-		options.forkOptions.jvmArgs.addAll( ["--add-opens", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED"] )
-	}
-
-	// Configure version of Java tools
-	java {
-		toolchain {
-			languageVersion = gradle.ext.javaVersions.main.compiler
-		}
-	}
-	tasks.compileTestJava {
-		javaCompiler = javaToolchains.compilerFor {
-			languageVersion = gradle.ext.javaVersions.test.compiler
-		}
-	}
-
-	// Configure JVM Options
-	// Display version of Java tools
-	tasks.withType( JavaCompile ).configureEach {
-		options.forkOptions.jvmArgs.addAll( getProperty( 'toolchain.compiler.jvmargs' ).toString().split( ' ' ) )
-		doFirst {
-			logger.lifecycle "Compiling with '${javaCompiler.get().metadata.installationPath}'"
-		}
-	}
-	tasks.withType( Javadoc ).configureEach {
-		options.setJFlags( getProperty( 'toolchain.javadoc.jvmargs' ).toString().split( ' ' ).toList().findAll( { !it.isEmpty() } ) )
-		doFirst {
-			logger.lifecycle "Generating javadoc with '${javadocTool.get().metadata.installationPath}'"
-		}
-	}
-}
-
 
 task compile(dependsOn: [compileJava, processResources, compileTestJava, processTestResources] )
 
@@ -231,7 +178,7 @@ if ( toolsJar.exists() ) {
 // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 // Testing
 
-if ( gradle.ext.javaToolchainEnabled ) {
+if ( jdkVersions.explicitlyConfigured ) {
 	tasks.test {
 		// Configure version of Java tools
 		javaLauncher = javaToolchains.launcherFor {
@@ -363,7 +310,7 @@ test {
 	// and those classes always have bytecode matching the version of the launcher.
 	// So for example, when using a JDK22 launcher and compiling tests with --release 21,
 	// Bytebuddy will still encounter classes with Java 22 bytecode.
-	if ( gradle.ext.javaVersions.test.launcher.asInt() >= 22 ) {
+	if ( jdkVersions.test.launcher.asInt() >= 22 ) {
 		logger.warn( "The version of Java bytecode that will be tested is not supported by Bytebuddy by default. " +
 				 " Setting 'net.bytebuddy.experimental=true'." )
 		systemProperty 'net.bytebuddy.experimental', true
@@ -537,7 +484,7 @@ task forbiddenApisSystemOut(type: CheckForbiddenApis, dependsOn: compileJava) {
 }
 
 task forbiddenApisUnsafe(type: CheckForbiddenApis, dependsOn: compileJava) {
-	bundledSignatures += "jdk-unsafe-${gradle.ext.baselineJavaVersion}".toString()
+	bundledSignatures += "jdk-unsafe-${jdkVersions.baseline}".toString()
 
 	// unfortunately we currently have many uses of default Locale implicitly (~370) which need to be fixed
 	// before we can fully enabled this check
